--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-card",
+  "name": "react-native-card-read",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -7,5 +7,5 @@
   },
   "author": "wj",
   "license": "MIT",
-  "version": "1.0.0"
+  "version": "0.1.0"
 }
