--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,22 @@
 apply plugin: 'com.android.library'
 
+buildscript{
+    repositories{
+        jcenter()
+    }
+
+    dependencies{
+        classpath "com.android.tools.build:gradle:2.3.3"
+    }
+}
+
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
+
+    repositories {
+        maven { url 'http://repo1.maven.org/maven2' }
+    }
 
     defaultConfig {
         minSdkVersion 16
@@ -19,9 +33,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile files('libs/jackson-all-1.7.6.jar')
 }
